unpackaged/main/default/objects/conference360__Email_Template__c/fields/conference360__JSON_File_2__c.field-meta.xml
<CustomField>
    <fullName>conference360__JSON_File_2__c</fullName>
    <label>JSON File 2</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>