unpackaged/main/default/objects/conference360__Email_Template__c/listViews/General_Event_Templates.listView-meta.xml
<ListView>
    <fullName>General_Event_Templates</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>CREATED_DATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <columns>LAST_UPDATE</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>conference360__Event__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>General</value>
    </filters>
    <label>General Event Templates</label>
    <sharedTo>
        <group>CRM_Core_Team</group>
    </sharedTo>
</ListView>