unpackaged/main/default/objects/conference360__Email_Template__c/listViews/Open_House.listView-meta.xml
<ListView>
    <fullName>Open_House</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>conference360__Event__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>OPH</value>
    </filters>
    <label>Open House</label>
</ListView>